# MotionBuilder-TakeManager

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
TakeManager/: TakeManager.py  __init__.py
TakeManager/Utils/: FixFrozenViewport.py  WindowCreator.py
