[project]

name = "TakeManager"

version = "1.0.0"

description = "Manage takes in Autodesk MotionBuilder in an easier and more efficient way, with extra customization options."

readme = "README.md"

requires-python = ">=3.7"

license = {file = "LICENSE.txt"}

keywords = ["python", "tool", "take", "motionbuilder", "mobu"]

authors = [
  {name = "Jacky Coh", email = "cohjacky@gmail.com" }
]

maintainers = [
  {name = "Jacky Coh", email = "cohjacky@gmail.com" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/Fuggy/MotionBuilder-TakeManager"
"Bug Reports" = "https://github.com/Fuggy/MotionBuilder-TakeManager/issues"

[tool.setuptools]
package-data = {"TakeManager" = ["**/*.png"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"