[metadata]
name = Take Manager
version = 1.0.0
author = Jacky Coh
description = Stuff
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fuggy/MotionBuilder-TakeManager
keywords = take, manager
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
include_package_data = False